tests/machine/x/cobol/math_ops.error
cobc: exit status 1
/workspace/mochi/tests/machine/x/cobol/math_ops.cob:6: error: syntax error, unexpected *
/workspace/mochi/tests/machine/x/cobol/math_ops.cob:7: error: syntax error, unexpected /
/workspace/mochi/tests/machine/x/cobol/math_ops.cob:8: error: invalid symbol '%' - skipping word

