tests/machine/x/cobol/math_ops.cob
       IDENTIFICATION DIVISION.
       PROGRAM-ID. MATH-OPS.
       DATA DIVISION.
       WORKING-STORAGE SECTION.
       01 TMP PIC 9(9) VALUE 0.
       PROCEDURE DIVISION.
       COMPUTE TMP = 6 * 7
       DISPLAY TMP
       COMPUTE TMP = 7 / 2
       DISPLAY TMP
       COMPUTE TMP = FUNCTION MOD(7, 2)
       DISPLAY TMP
       STOP RUN.
